user/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: user
    version: ${USER_VERSION}
    app.kubernetes.io/name: user
    app.kubernetes.io/version: ${USER_VERSION}
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: ${APP_NAME}
  name: user
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: user
    weight: 100
